--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -5,7 +5,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="lift:Menu.title">App: </title>
+    <title class="lift:Menu.title">BarcodeRoulette</title>
 
     <link href="/classpath/fobo/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="/classpath/fobo/bootstrap-theme.css" rel="stylesheet" type="text/css" />
@@ -17,11 +17,8 @@
   <body>
     <span data-lift='embed?what=_embeddedTopNavbar'> Embedding the TopNavbar here</span>
     <div class="container">
-      <div class="col-sm-9">
-        <div id="content">The main content will get bound here</div>
-      </div>
+      <div id="content">The main content will get bound here</div>
     </div><!-- container -->
     <script src="/classpath/fobo/bootstrap.js" type="text/javascript"></script>
-  </div>   
-</body>
+  </body>
 </html>
