--- a/html/index.html
+++ b/html/index.html
@@ -35,43 +35,45 @@
     </div>  
   </header>
 
-  <ul>
-    <li class="restaurant">
-      <img src="http://i.imgur.com/Csgdbwj.jpg" class="img-responsive rounded-image" alt="Responsive image">
-      <ul class="restaurant-info">
-        <li>
-          Qdoba
-        </li>
-        <li class="pull-right">
-          0.1 Miles Away
-        </li>
-      </ul>
-      <hr/>
-    </li>
-    <li class="restaurant">
-      <img src="http://i.imgur.com/5MZZlQs.jpg" class="img-responsive rounded-image" alt="Responsive image">
-      <ul class="restaurant-info">
-        <li>
-          Starbucks
-        </li>
-        <li class="pull-right">
-          0.8 Miles Away
-        </li>
-      </ul>
-      <hr/>
-    </li>
-    <li class="restaurant">
-      <img src="http://i.imgur.com/CzG2uPR.jpg" class="img-responsive rounded-image" alt="Responsive image">
-      <ul class="restaurant-info">
-        <li>
-          Subway
-        </li>
-        <li class="pull-right">
-          2.1 Miles Away
-        </li>
-      </ul>
-    </li>
-  </ul>
+  <div class="container">
+    <ul>
+      <li class="restaurant">
+        <img src="http://i.imgur.com/Csgdbwj.jpg" class="img-responsive rounded-image" alt="Responsive image">
+        <ul class="restaurant-info">
+          <li>
+            Qdoba
+          </li>
+          <li class="pull-right">
+            0.1 Miles Away
+          </li>
+        </ul>
+        <hr/>
+      </li>
+      <li class="restaurant">
+        <img src="http://i.imgur.com/5MZZlQs.jpg" class="img-responsive rounded-image" alt="Responsive image">
+        <ul class="restaurant-info">
+          <li>
+            Starbucks
+          </li>
+          <li class="pull-right">
+            0.8 Miles Away
+          </li>
+        </ul>
+        <hr/>
+      </li>
+      <li class="restaurant">
+        <img src="http://i.imgur.com/CzG2uPR.jpg" class="img-responsive rounded-image" alt="Responsive image">
+        <ul class="restaurant-info">
+          <li>
+            Subway
+          </li>
+          <li class="pull-right">
+            2.1 Miles Away
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 
   <tail>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
