--- a/html/demo.html
+++ b/html/demo.html
@@ -10,18 +10,18 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
+
   <link href="stylesheets/app-bs-theme.css" rel="stylesheet">
 </head>
 <body>
 
   <header id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <a class="navbar-brand alt" href="#">
-          BarcodeRoulette<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="images/ajax-loader.gif"></a>
-      </div>
-    </div>  
+    <div>
+      <h4>
+        Barcode Roulette
+      </h4>
+    </div>
   </header>
 
   <div class="container">
