--- a/html/demo.html
+++ b/html/demo.html
@@ -11,16 +11,19 @@
   
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
-
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  
   <link href="stylesheets/app-bs-theme.css" rel="stylesheet">
 </head>
 <body>
 
   <header id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div>
+      <i class="fa fa-angle-left"></i>
       <h4>
         Barcode Roulette
       </h4>
+      <i class="fa fa-heart"></i>
     </div>
   </header>
 
