--- a/html/index.html
+++ b/html/index.html
@@ -36,45 +36,65 @@
   </header>
 
   <div class="container">
+    <span>Popular near you</span>
     <ul>
       <li class="restaurant">
-        <img src="http://i.imgur.com/Csgdbwj.jpg" class="img-responsive rounded-image" alt="Responsive image">
-        <ul class="restaurant-info">
-          <li>
-            Qdoba
-          </li>
-          <li class="pull-right">
-            0.1 Miles Away
-          </li>
-        </ul>
-        <hr/>
+        <div>
+          <img src="http://i.imgur.com/mMQQ3sD.png" class="img-responsive">
+          <ul class="restaurant-info">
+            <li>
+              Qdoba
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="restaurant">
-        <img src="http://i.imgur.com/5MZZlQs.jpg" class="img-responsive rounded-image" alt="Responsive image">
-        <ul class="restaurant-info">
-          <li>
-            Starbucks
-          </li>
-          <li class="pull-right">
-            0.8 Miles Away
-          </li>
-        </ul>
-        <hr/>
+        <div>
+          <img src="http://i.imgur.com/g3vwC61.png" class="img-responsive">
+          <ul class="restaurant-info">
+            <li>
+              Starbucks
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="restaurant">
-        <img src="http://i.imgur.com/CzG2uPR.jpg" class="img-responsive rounded-image" alt="Responsive image">
-        <ul class="restaurant-info">
-          <li>
-            Subway
+        <div>
+          <img src="http://i.imgur.com/L1E3nOE.png" class="img-responsive rounded-image" alt="Responsive image">
+          <ul class="restaurant-info">
+            <li>
+              Subway
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        Nearby
+      </li>
+      <li>
+        <ul class="nearby-restaurant">
+          <li> 
+            <div class="image-container">
+              <img src="http://i.imgur.com/5bTbGTv.png">
+            </div>
+            <span>Starbucks</span>
+          </li>
+          <li class="center-block">
+            <div class="image-container">
+              <img src="http://i.imgur.com/j31OYhZ.png">
+            </div>
+            <span>Starbucks</span>
           </li>
           <li class="pull-right">
-            2.1 Miles Away
+            <div class="image-container">
+              <img src="http://i.imgur.com/e4HtpzE.png">
+            </div>
+            <span>Starbucks</span>
           </li>
         </ul>
       </li>
     </ul>
   </div>
-
   <tail>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </tail>
