centered middle duder

--- a/html/demo.html
+++ b/html/demo.html
@@ -71,7 +71,7 @@
             </div>
             <span>Starbucks</span>
           </li>
-          <li class="center-block">
+          <li class="middle">
             <div class="image-container">
               <img src="http://i.imgur.com/j31OYhZ.png">
             </div>
