grayed the borders

--- a/html/demo.html
+++ b/html/demo.html
@@ -37,6 +37,19 @@
             <li>
               Qdoba
             </li>
+            <li>
+              <ul class="popularity">
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+              </ul>
+            </li>
           </ul>
         </div>
       </li>
@@ -47,6 +60,16 @@
             <li>
               Starbucks
             </li>
+            <li>
+              <ul class="popularity">
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+              </ul>
+            </li>
           </ul>
         </div>
       </li>
@@ -56,6 +79,16 @@
           <ul class="restaurant-info">
             <li>
               Subway
+            </li>
+            <li>
+              <ul class="popularity">
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+                <li>
+                  <img src="http://i.imgur.com/ehkXKK1.png">
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -75,13 +108,13 @@
             <div class="image-container">
               <img src="http://i.imgur.com/j31OYhZ.png">
             </div>
-            <span>Starbucks</span>
+            <span>Pizza Hut</span>
           </li>
           <li class="pull-right">
             <div class="image-container">
               <img src="http://i.imgur.com/e4HtpzE.png">
             </div>
-            <span>Starbucks</span>
+            <span>Moe's</span>
           </li>
         </ul>
       </li>
