pulled popularity to the right

--- a/html/demo.html
+++ b/html/demo.html
@@ -37,7 +37,7 @@
             <li>
               Qdoba
             </li>
-            <li>
+            <li class="pull-right">
               <ul class="popularity">
                 <li>
                   <img src="http://i.imgur.com/ehkXKK1.png">
@@ -60,7 +60,7 @@
             <li>
               Starbucks
             </li>
-            <li>
+            <li class="pull-right">
               <ul class="popularity">
                 <li>
                   <img src="http://i.imgur.com/ehkXKK1.png">
@@ -80,7 +80,7 @@
             <li>
               Subway
             </li>
-            <li>
+            <li class="pull-right">
               <ul class="popularity">
                 <li>
                   <img src="http://i.imgur.com/ehkXKK1.png">
