cropped out the white space

--- a/html/demo.html
+++ b/html/demo.html
@@ -32,7 +32,7 @@
     <ul>
       <li class="restaurant">
         <div>
-          <img src="http://i.imgur.com/mMQQ3sD.png" class="img-responsive">
+          <img src="http://i.imgur.com/wkGlXtB.png" class="img-responsive">
           <ul class="restaurant-info">
             <li>
               Qdoba
@@ -55,7 +55,7 @@
       </li>
       <li class="restaurant">
         <div>
-          <img src="http://i.imgur.com/g3vwC61.png" class="img-responsive">
+          <img src="http://i.imgur.com/DKxETWO.png" class="img-responsive">
           <ul class="restaurant-info">
             <li>
               Starbucks
@@ -75,7 +75,7 @@
       </li>
       <li class="restaurant">
         <div>
-          <img src="http://i.imgur.com/L1E3nOE.png" class="img-responsive rounded-image" alt="Responsive image">
+          <img src="http://i.imgur.com/Vbyy43H.png" class="img-responsive rounded-image" alt="Responsive image">
           <ul class="restaurant-info">
             <li>
               Subway
