--- a/html/groups.html
+++ b/html/groups.html
@@ -21,7 +21,7 @@
     <div>
       <i class="fa fa-angle-left"></i>
       <h4>
-        Barcode Roulette
+        Groups
       </h4>
       <img id="icon" src="http://i.imgur.com/09XEI7i.png">
     </div>
@@ -125,3 +125,4 @@
   </tail>
 </body>
 </html>
+
