--- a/html/groups.html
+++ b/html/groups.html
@@ -14,6 +14,7 @@
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   
   <link href="stylesheets/app-bs-theme.css" rel="stylesheet">
+  <link href="stylesheets/header.css" rel="stylesheet">
 </head>
 <body>
 
