added search and create bar to groups.html

--- a/html/groups.html
+++ b/html/groups.html
@@ -15,6 +15,7 @@
   
   <link href="stylesheets/app-bs-theme.css" rel="stylesheet">
   <link href="stylesheets/header.css" rel="stylesheet">
+  <link href="stylesheets/groups.css" rel="stylesheet">
 </head>
 <body>
 
@@ -26,8 +27,11 @@
       </h4>
       <img id="icon" src="http://i.imgur.com/09XEI7i.png">
     </div>
+    
   </header>
-
+  <ul class="search-and-create">
+    <li><span>Search</span></li><li><span>Create</span></li>
+  </ul>
   <div class="container">
     <span>Popular near you</span>
     <ul>
