added icons to groups

--- a/html/groups.html
+++ b/html/groups.html
@@ -8,6 +8,7 @@
   <title>BarcodeRoulette</title>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="holder.js"></script>
   
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
@@ -32,7 +33,22 @@
   <ul class="search-and-create">
     <li><span>Search</span></li><li><span>Create</span></li>
   </ul>
-  <div class="container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:P" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:CF" class="img-circle"></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:SG" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:VL" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:WG" class="img-circle"></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:C" class="img-circle"></div>
+      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
+    </div>
     <span>Popular near you</span>
     <ul>
       <li class="restaurant">
@@ -127,6 +143,7 @@
   </div>
   <tail>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.4.1/holder.js"></script>
   </tail>
 </body>
 </html>
