social buttons styled

--- a/html/subway.html
+++ b/html/subway.html
@@ -25,7 +25,7 @@
       <h4>
         Barcode Roulette
       </h4>
-      <i class="fa fa-heart"></i>
+      <img id="icon" src="http://i.imgur.com/09XEI7i.png">
     </div>
   </header>
 
@@ -34,8 +34,18 @@
     <div id="scan-result">
       <span>Did you win?</span>
       <ul id="win-results">
-        <li>Yes</li><li>No</li>
+        <li class="active">Yes</li><li>No</li>
       </ul>
+    </div>
+    <div id="share-social">
+      <div class="social-network">
+        <i class="fa fa-facebook-square fa-3x"></i>
+        <div>Facebook</div>
+      </div>
+      <div class="social-network">
+        <i class="fa fa-twitter fa-3x"></i>
+        <div>Twitter</div>
+      </div>
     </div>
   </div>
   <tail>
