add more info as footer

--- a/html/subway.html
+++ b/html/subway.html
@@ -29,27 +29,33 @@
     </div>
   </header>
 
-  <div>
-    <img id="barcode" src="images/qr-code.png">
-    <div id="scan-result">
-      <span>Did you win?</span>
-      <ul id="win-results">
-        <li class="active">Yes</li><li>No</li>
-      </ul>
+  <div id="store-page">
+    <div id="user-transaction"> 
+      <img id="barcode" src="images/qr-code.png">
+      <div id="scan-result">
+        <span>Did you win?</span>
+        <ul id="win-results">
+          <li class="active">Yes</li><li>No</li>
+        </ul>
+      </div>
+      <div id="share-social">
+        <div class="social-network">
+          <i class="fa fa-facebook-square fa-3x"></i>
+          <div>Facebook</div>
+        </div>
+        <div class="social-network">
+          <i class="fa fa-twitter fa-3x"></i>
+          <div>Twitter</div>
+        </div>
+      </div>
     </div>
-    <div id="share-social">
-      <div class="social-network">
-        <i class="fa fa-facebook-square fa-3x"></i>
-        <div>Facebook</div>
-      </div>
-      <div class="social-network">
-        <i class="fa fa-twitter fa-3x"></i>
-        <div>Twitter</div>
-      </div>
+    <div id="more-information">
+      <div class="arrow-up"></div>
+      More Information
     </div>
   </div>
   <tail>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </tail>
 </body>
 </html>
