adjust styles and spacing

--- a/html/subway.html
+++ b/html/subway.html
@@ -31,7 +31,9 @@
 
   <div id="store-page">
     <div id="user-transaction"> 
-      <img id="barcode" src="images/qr-code.png">
+      <div id="barcode">
+        <img src="images/qr-code.png">
+      </div>
       <div id="scan-result">
         <span>Did you win?</span>
         <ul id="win-results">
