swipe to reveal info

--- a/html/subway.html
+++ b/html/subway.html
@@ -54,6 +54,7 @@
     <div id="more-information" class="closed">
       <div class="arrow-up"></div>
       More Information
+      <img src="images/subway.png" id="restaurant-header">
     </div>
   </div>
   <tail>
