fixed names for demo and added circles to groups

--- a/html/demo.html
+++ b/html/demo.html
@@ -59,7 +59,7 @@
           <img src="http://i.imgur.com/DKxETWO.png" class="img-responsive">
           <ul class="restaurant-info">
             <li>
-              Starbucks
+              Subway
             </li>
             <li class="pull-right">
               <ul class="popularity">
@@ -79,7 +79,7 @@
           <img src="http://i.imgur.com/Vbyy43H.png" class="img-responsive rounded-image" alt="Responsive image">
           <ul class="restaurant-info">
             <li>
-              Subway
+              Papa Johns
             </li>
             <li class="pull-right">
               <ul class="popularity">
