--- a/html/groups.html
+++ b/html/groups.html
@@ -33,113 +33,49 @@
   <ul class="search-and-create">
     <li><span>Search</span></li><li><span>Create</span></li>
   </ul>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:P" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:CF" class="img-circle"></div>
+  <div class="container">
+    <div class="row left-row top-row">
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:GG" class="img-circle">
+        <span>Global Group</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:P" class="img-circle">
+        <span>Protographer</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:CF" class="img-circle">
+        <span>Close Friends</span>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:SG" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:VL" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:WG" class="img-circle"></div>
+    <div class="row left-row">
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:SG" class="img-circle center">
+        <span>Study Group</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:VL" class="img-circle">
+        <span>Video Lover</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:WG" class="img-circle">
+        <span>Writing Group</span>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:C" class="img-circle"></div>
-      <div class="col-xs-4"><img src="holder.js/60x60/random/text:GG" class="img-circle"></div>
+    <div class="row left-row">
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:GG" class="img-circle">
+        <span>Global Group</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:C" class="img-circle">
+        <span>Classmates</span>
+      </div>
+      <div class="col-xs-4">
+        <img src="holder.js/60x60/random/text:GG" class="img-circle">
+        <span>Global Group</span>
+      </div>
     </div>
-    <span>Popular near you</span>
-    <ul>
-      <li class="restaurant">
-        <div>
-          <img src="http://i.imgur.com/wkGlXtB.png" class="img-responsive">
-          <ul class="restaurant-info">
-            <li>
-              Qdoba
-            </li>
-            <li class="pull-right">
-              <ul class="popularity">
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="restaurant">
-        <div>
-          <img src="http://i.imgur.com/DKxETWO.png" class="img-responsive">
-          <ul class="restaurant-info">
-            <li>
-              Starbucks
-            </li>
-            <li class="pull-right">
-              <ul class="popularity">
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="restaurant">
-        <div>
-          <img src="http://i.imgur.com/Vbyy43H.png" class="img-responsive rounded-image" alt="Responsive image">
-          <ul class="restaurant-info">
-            <li>
-              Subway
-            </li>
-            <li class="pull-right">
-              <ul class="popularity">
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        Nearby
-      </li>
-      <li>
-        <ul class="nearby-restaurant">
-          <li> 
-            <div class="image-container">
-              <img src="http://i.imgur.com/5bTbGTv.png">
-            </div>
-            <span>Starbucks</span>
-          </li>
-          <li class="middle">
-            <div class="image-container">
-              <img src="http://i.imgur.com/j31OYhZ.png">
-            </div>
-            <span>Pizza Hut</span>
-          </li>
-          <li class="pull-right">
-            <div class="image-container">
-              <img src="http://i.imgur.com/e4HtpzE.png">
-            </div>
-            <span>Moe's</span>
-          </li>
-        </ul>
-      </li>
-    </ul>
   </div>
   <tail>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
