added signup page

--- a/html/groups.html
+++ b/html/groups.html
@@ -36,44 +36,40 @@
   <div class="container">
     <div class="row left-row top-row">
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:GG" class="img-circle">
+        <img src="images/globalgroup.jpg">
         <span>Global Group</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:P" class="img-circle">
+        <img src="images/photographer.jpg">
         <span>Protographer</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:CF" class="img-circle">
+        <img src="images/closefriends.jpg">
         <span>Close Friends</span>
       </div>
     </div>
     <div class="row left-row">
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:SG" class="img-circle center">
+        <img src="images/studygroup.jpg">
         <span>Study Group</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:VL" class="img-circle">
+        <img src="images/videolover.jpg">
         <span>Video Lover</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:WG" class="img-circle">
+        <img src="images/Writinggroup.jpg">
         <span>Writing Group</span>
       </div>
     </div>
     <div class="row left-row">
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:GG" class="img-circle">
-        <span>Global Group</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:C" class="img-circle">
+        <img src="images/classmates.jpg">
         <span>Classmates</span>
       </div>
       <div class="col-xs-4">
-        <img src="holder.js/60x60/random/text:GG" class="img-circle">
-        <span>Global Group</span>
       </div>
     </div>
   </div>
