added log in page

--- a/html/login.html
+++ b/html/login.html
@@ -15,20 +15,20 @@
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   
   <link href="stylesheets/app-bs-theme.css" rel="stylesheet">
-  <link href="stylesheets/signup.css" rel="stylesheet">
+  <link href="stylesheets/login.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <img id="logo" src="images/barcoderoulette_logo_transp.png"
     <form>
-      <ul id="signup-form">
+      <ul id="signin-form">
         <li><input class="text" type="text" name="email" placeholder="email"></li>
         <li><input class="text" type="text" name="password" placeholder="password"></li>
-        <li><input class="text" type="text" name="repeat" placeholder="retype password"></li>
-        <li><input id="submit" type="submit" value="Create Account"></li>
+        <li><input id="submit" type="submit" value="Log in"></li>
       </ul>
     </form>
-    <a href="#" id="contact">Contact Us</a>
+    <a href="#" id="signup-link">Don't have an account? <b>Sign up!</b></a>
+    <a href="#" id="skip">Skip this step.</a>
   </div>
   <tail>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -36,5 +36,6 @@
   </tail>
 </body>
 </html>
+
 
 
