--- a/html/subway.html
+++ b/html/subway.html
@@ -51,10 +51,18 @@
         </div>
       </div>
     </div>
-    <div id="more-information" class="closed">
+    <div id="more-information" class="">
       <div class="arrow-up"></div>
       More Information
       <img src="images/subway.png" id="restaurant-header">
+      <div id="redeem-details">
+        Buy a 6" or 12" sandwhich for a chance for free food. No cash value. May not be combined with any other offer or discount. Double meat, extra cheese, bacon, and avacode available at an additional cost.
+      </div>
+      <img src="images/subway-map.png" id="restaurant-map">
+      <div id="restaurant-address">
+        350 Ferst Dr, Atlanta, GA 30332
+      </div>
+      <i class="fa fa-angle-right"></i>
     </div>
   </div>
   <tail>
