--- a/html/subway.html
+++ b/html/subway.html
@@ -62,8 +62,8 @@
         <img src="images/subway-map.png" id="restaurant-map">
         <div id="restaurant-address">
           350 Ferst Dr, Atlanta, GA 30332
+          <i class="fa fa-angle-right"></i>
         </div>
-        <i class="fa fa-angle-right"></i>
       </div>
     </div>
   </div>
@@ -79,11 +79,13 @@
       var mc = new Hammer(moreInfo);
 
       // listen to events...
-      mc.on("swipe", function(ev) {
+      mc.on("tap swipe", function(ev) {
         if($(moreInfo).hasClass('closed')) {
-          $(moreInfo).removeClass('closed');
+          $(moreInfo).toggleClass('closed');
+          $('#header').toggleClass('closed'); 
         } else {
-          $(moreInfo).addClass('closed');
+          $(moreInfo).toggleClass('closed');
+          $('#header').toggleClass('closed');
         }
       });
 
