--- a/html/groups.html
+++ b/html/groups.html
@@ -64,12 +64,16 @@
     </div>
     <div class="row left-row">
       <div class="col-xs-4">
+        <img src="images/fraternity.png">
+        <span>PhiSig</span>
       </div>
       <div class="col-xs-4">
         <img src="images/classmates.jpg">
         <span>Classmates</span>
       </div>
       <div class="col-xs-4">
+        <img src="images/fraternity.png">
+        <span>PhiSig</span>
       </div>
     </div>
   </div>
