update image urls to local

--- a/html/demo.html
+++ b/html/demo.html
@@ -24,7 +24,7 @@
       <h4>
         Barcode Roulette
       </h4>
-      <img id="icon" src="http://i.imgur.com/09XEI7i.png">
+      <img id="icon" src="images/roulette-icon.png">
     </div>
   </header>
 
@@ -33,30 +33,7 @@
     <ul>
       <li class="restaurant">
         <div>
-          <img src="http://i.imgur.com/wkGlXtB.png" class="img-responsive">
-          <ul class="restaurant-info">
-            <li>
-              Qdoba
-            </li>
-            <li class="pull-right">
-              <ul class="popularity">
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-                <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="restaurant">
-        <div>
-          <img src="http://i.imgur.com/DKxETWO.png" class="img-responsive">
+          <img src="images/subway-sandwhich.jpg" class="img-responsive">
           <ul class="restaurant-info">
             <li>
               Subway
@@ -64,10 +41,13 @@
             <li class="pull-right">
               <ul class="popularity">
                 <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
+                  <img src="images/user-popularity-icon.png">
                 </li>
                 <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
+                  <img src="images/user-popularity-icon.png">
+                </li>
+                <li>
+                  <img src="images/user-popularity-icon.png">
                 </li>
               </ul>
             </li>
@@ -84,10 +64,30 @@
             <li class="pull-right">
               <ul class="popularity">
                 <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
+                  <img src="images/user-popularity-icon.png">
                 </li>
                 <li>
-                  <img src="http://i.imgur.com/ehkXKK1.png">
+                  <img src="images/user-popularity-icon.png">
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="restaurant">
+        <div>
+          <img src="images/wingnuts.jpg" class="img-responsive">
+          <ul class="restaurant-info">
+            <li>
+              Wingnuts
+            </li>
+            <li class="pull-right">
+              <ul class="popularity">
+                <li>
+                  <img src="images/user-popularity-icon.png">
+                </li>
+                <li>
+                  <img src="images/user-popularity-icon.png">
                 </li>
               </ul>
             </li>
@@ -101,19 +101,19 @@
         <ul class="nearby-restaurant">
           <li> 
             <div class="image-container">
-              <img src="http://i.imgur.com/5bTbGTv.png">
+              <img src="images/starbucks-location.png">
             </div>
             <span>Starbucks</span>
           </li>
           <li class="middle">
             <div class="image-container">
-              <img src="http://i.imgur.com/j31OYhZ.png">
+              <img src="images/pizza-hut-location.png">
             </div>
             <span>Pizza Hut</span>
           </li>
           <li class="pull-right">
             <div class="image-container">
-              <img src="http://i.imgur.com/e4HtpzE.png">
+              <img src="images/moes-location.png">
             </div>
             <span>Moe's</span>
           </li>
