--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
         <li><input id="submit" type="submit" value="Log in"></li>
       </ul>
     </form>
-    <a href="#" id="signup-link">Don't have an account? <b>Sign up!</b></a>
+    <a href="signup.html" id="signup-link">Don't have an account? <b>Sign up!</b></a>
     <a href="#" id="skip">Skip this step.</a>
   </div>
   <tail>
