--- a/html/signup.html
+++ b/html/signup.html
@@ -25,7 +25,9 @@
         <li><input class="text" type="text" name="email" placeholder="email"></li>
         <li><input class="text" type="text" name="password" placeholder="password"></li>
         <li><input class="text" type="text" name="repeat" placeholder="retype password"></li>
-        <li><input id="submit" type="submit" value="Create Account"></li>
+        <li>
+          <input id="submit" type="button" value="Create Account" onclick="location.href='groups.html'">
+        </li>
       </ul>
     </form>
     <a href="#" id="contact">Contact Us</a>
