--- a/html/demo.html
+++ b/html/demo.html
@@ -56,7 +56,7 @@
       </li>
       <li class="restaurant">
         <div>
-          <img src="http://i.imgur.com/Vbyy43H.png" class="img-responsive rounded-image" alt="Responsive image">
+          <img src="images/papajohns.png" class="img-responsive rounded-image" alt="Responsive image">
           <ul class="restaurant-info">
             <li>
               Papa Johns
