--- a/html/groups.html
+++ b/html/groups.html
@@ -26,7 +26,7 @@
       <h4>
         Groups
       </h4>
-      <img id="icon" src="http://i.imgur.com/09XEI7i.png">
+      <img id="icon" src="images/logo-small.png">
     </div>
     
   </header>
