--- a/html/subway.html
+++ b/html/subway.html
@@ -25,7 +25,7 @@
       <h4>
         Barcode Roulette
       </h4>
-      <img id="icon" src="http://i.imgur.com/09XEI7i.png">
+      <img id="icon" src="images/logo-small.png">
     </div>
   </header>
 
