--- a/html/businesses.html
+++ b/html/businesses.html
@@ -32,6 +32,7 @@
     <span>Popular near you</span>
     <ul>
       <li class="restaurant">
+        <a href="subway.html">
         <div>
           <img src="images/subway-sandwhich.jpg" class="img-responsive">
           <ul class="restaurant-info">
@@ -53,6 +54,7 @@
             </li>
           </ul>
         </div>
+        </a>
       </li>
       <li class="restaurant">
         <div>
