startup weekend image

--- a/html/groups.html
+++ b/html/groups.html
@@ -72,8 +72,8 @@
         <span>Classmates</span>
       </div>
       <div class="col-xs-4">
-        <img src="images/fraternity.png">
-        <span>PhiSig</span>
+        <img src="images/startupweekend.jpg">
+        <span>Startup Weekend</span>
       </div>
     </div>
   </div>
