link from groups to businesses

--- a/html/groups.html
+++ b/html/groups.html
@@ -72,8 +72,10 @@
         <span>Classmates</span>
       </div>
       <div class="col-xs-4">
-        <img src="images/fraternity.png">
-        <span>PhiSig</span>
+        <a id="startup-weekend-group" href="businesses.html">
+          <img src="images/fraternity.png">
+          <span>PhiSig</span>
+        </a>
       </div>
     </div>
   </div>
