fixed blurb text

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,8 @@
     <img id="logo" src="images/barcoderoulette_logo_transp.png"
     <div>
       <h2 id="blurbh2">BARCODE ROULETTE!</h2>
-      <p id="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at elit lorem. Etiam pellentesque sodales neque ac tincidunt. Sed varius massa massa, vitae molestie elit mattis eu. Donec egestas tincidunt elementum. Vestibulum ac neque tristique, vestibulum metus a, feugiat mi. Suspendisse sit amet dolor et sapien eleifend aliquet sit amet eu nulla. Aliquam dapibus ac odio vulputate accumsan.</p>
+      <p class="blurb">A chance to get free stuff in many of your favorite stores! Barcode Roulette is a group-based digital punchcard that gives you a chance to be the one to land the freebie.</p>
+      <p class="blurb">Feeling lucky? Submit your email below and be the first to be notified when the app is ready to download.</p>
       <form>
         <ul id="email-form">
           <li><input class="text" type="text" name="email" placeholder="email@example.com"></li>
