fixed group picture

--- a/html/groups.html
+++ b/html/groups.html
@@ -58,7 +58,7 @@
         <span>Video Lover</span>
       </div>
       <div class="col-xs-4">
-        <img src="images/Writinggroup.jpg">
+        <img src="images/writinggroup.jpg">
         <span>Writing Group</span>
       </div>
     </div>
