nuked padding at bottom

--- a/html/groups.html
+++ b/html/groups.html
@@ -62,7 +62,7 @@
         <span>Writing Group</span>
       </div>
     </div>
-    <div class="row left-row">
+    <div class="row left-row last">
       <div class="col-xs-4">
         <img src="images/fraternity.png">
         <span>PhiSig</span>
