--- a/html/subway.html
+++ b/html/subway.html
@@ -23,7 +23,7 @@
     <div>
       <i class="fa fa-angle-left"></i>
       <h4>
-        Barcode Roulette
+        Subway
       </h4>
       <img id="icon" src="images/logo-small.png">
     </div>
