fix flow and padding

--- a/html/login.html
+++ b/html/login.html
@@ -19,12 +19,12 @@
 </head>
 <body>
   <div class="container">
-    <img id="logo" src="images/barcoderoulette_logo_transp.png"
+    <img id="logo" src="images/barcoderoulette_logo_transp.png">
     <form>
       <ul id="signin-form">
         <li><input class="text" type="text" name="email" placeholder="email"></li>
         <li><input class="text" type="text" name="password" placeholder="password"></li>
-        <li><input id="submit" type="submit" value="Log in"></li>
+        <li><input id="submit" type="button" value="Log in" onclick="location.href='groups.html'"></li>
       </ul>
     </form>
     <a href="signup.html" id="signup-link">Don't have an account? <b>Sign up!</b></a>
