--- a/html/signup.html
+++ b/html/signup.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="logo" src="images/barcoderoulette_logo_transp.png"
+    <img id="logo" src="images/barcoderoulette_logo_transp.png">
     <form>
       <ul id="signup-form">
         <li><input class="text" type="text" name="email" placeholder="email"></li>
