remove holder.js

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,6 @@
   <title>BarcodeRoulette</title>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="holder.js"></script>
   
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
@@ -19,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="logo" src="images/barcoderoulette_logo_transp.png"
+    <img id="logo" src="images/barcoderoulette_logo_transp.png">
     <div>
       <h2 id="blurbh2">BARCODE ROULETTE!</h2>
       <p class="blurb">A chance to get free stuff in many of your favorite stores! Barcode Roulette is a group-based digital punchcard that gives you a chance to be the one to land the freebie.</p>
