change to password

--- a/html/login.html
+++ b/html/login.html
@@ -22,7 +22,7 @@
     <form>
       <ul id="signin-form">
         <li><input class="text" type="text" name="email" placeholder="email"></li>
-        <li><input class="text" type="text" name="password" placeholder="password"></li>
+        <li><input class="text" type="password" name="password" placeholder="password"></li>
         <li><input id="submit" type="button" value="Log in" onclick="location.href='groups.html'"></li>
       </ul>
     </form>
