--- a/html/index.html
+++ b/html/index.html
@@ -23,12 +23,25 @@
       <h2 id="blurbh2">BARCODE ROULETTE!</h2>
       <p class="blurb">A chance to get free stuff in many of your favorite stores! Barcode Roulette is a group-based digital punchcard that gives you a chance to be the one to land the freebie.</p>
       <p class="blurb">Feeling lucky? Submit your email below and be the first to be notified when the app is ready to download.</p>
-      <form>
-        <ul id="email-form">
-          <li><input class="text" type="text" name="email" placeholder="email@example.com"></li>
-          <li><input id="submit" type="submit" value="Submit"></li>
-        </ul>
-      </form>
+      
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="//barcoderoulette.us9.list-manage.com/subscribe/post?u=97cdf7574f4994caf865d3622&amp;id=9a33315745" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="mc-field-group">
+              <input type="email" value="" name="EMAIL" class="required email text" id="mce-EMAIL" placeholder="email@example.com">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_97cdf7574f4994caf865d3622_9a33315745" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" id="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
+
     </div>
   </div>
   <tail>
