add login creds

--- a/html/login.html
+++ b/html/login.html
@@ -21,8 +21,8 @@
     <img id="logo" src="images/barcoderoulette_logo_transp.png">
     <form>
       <ul id="signin-form">
-        <li><input class="text" type="text" name="email" placeholder="email"></li>
-        <li><input class="text" type="password" name="password" placeholder="password"></li>
+        <li><input class="text" type="text" name="email" placeholder="email" value="beau.shinkle@gmail.com"></li>
+        <li><input class="text" type="password" name="password" placeholder="password" value="password"></li>
         <li><input id="submit" type="button" value="Log in" onclick="location.href='groups.html'"></li>
       </ul>
     </form>
